# raindrop

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Config.cmake  LICENSE  LICENSE.MD  README.MD  Sample.cpp  TODO.md  formatYamlSchema.py  schema_output.json  yamlSchema.json
Modules/Prograd/src/: CMakeLists.txt  Interface.cpp  common.cpp
libs/: CMakeLists.txt
src/: Asset.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  CommandBuffer.cpp  Context.cpp  Engine.cpp  Entity.cpp  Event.cpp  Format.cpp  GBuffer.cpp  GMemory.cpp  GUID.cpp  Operators.cpp  Pipeline.cpp  Raindrop.cpp  RenderPass.cpp  Scene.cpp  Texture.cpp  TextureSubset.cpp  UUID.cpp  UUIDRegistry.cpp  Vertex.cpp
src/Assets/: Context.cpp  Manager.cpp
src/Components/: Model.cpp  Transformation.cpp
src/Core/: CMakeLists.txt  CmakeLists.txt  Configuration.cpp  Context.cpp  Core.cpp  Engine.cpp  TaskQueue.cpp  UUID.cpp  UUIDRegistry.cpp
src/Core/Asset/: Asset.cpp  AssetFactory.cpp  AssetManager.cpp  CMakeLists.txt  CmakeLists.txt  Context.cpp  Manager.cpp
src/Core/Assets/: Context.cpp  Manager.cpp
src/Core/Event/: CMakeLists.txt  CmakeLists.txt  Context.cpp  EventManager.cpp  KeyEvents.cpp  Manager.cpp  MouseEvents.cpp  MouveEvents.cpp
src/Core/Events/: Context.cpp  Inputs.cpp  Manager.cpp
src/Core/IO/: DLLReader.cpp
src/Core/Modules/: Loader.cpp  Module.cpp
src/Core/Registry/: CMakeLists.txt  CmakeLists.txt  Context.cpp  Node.cpp  Registry.cpp
src/Core/Scene/: CMakeLists.txt  CmakeLists.txt  ComponentManager.cpp  ComponentRegistry.cpp  Context.cpp  Entity.cpp  EntityComponentsRegistry.cpp  EntityManager.cpp  Scene.cpp  SceneManager.cpp  Scenes.cpp
src/Core/Scenes/: Context.cpp  Entity.cpp  Registry.cpp  Scene.cpp  SceneRegistry.cpp
src/Core/Tasks/: Tasks.cpp
src/Events/: Context.cpp  Inputs.cpp  Manager.cpp
src/Exceptions/: VulkanExceptions.cpp
src/Graphics/: Buffer.cpp  CMakeLists.txt  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  Context.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  DescriptorSetLayouts.cpp  Device.cpp  DummyTexture.cpp  Engine.cpp  FormatUtilities.cpp  Formats.cpp  ForwardShader.cpp  FrameState.cpp  Framebuffer.cpp  GlobalDescriptorPool.cpp  GraphicsCommandBuffers.cpp  GraphicsCommandPool.cpp  GraphicsContext.cpp  GraphicsFamily.cpp  GraphicsPipeline.cpp  ImGUI.cpp  Image.cpp  ImageView.cpp  Loader.cpp  Memory.cpp  Mesh.cpp  MeshData.cpp  Model.cpp  ModelLayoutConfig.cpp  ModelLoader.cpp  PipelineLayout.cpp  Pipelines.cpp  PresentFamily.cpp  RenderPass.cpp  RenderPasses.cpp  RenderPassesManager.cpp  (+17 more)
src/Graphics/BaseFramebuffer/: DescriptorSet.cpp  Framebuffer.cpp  FullscreenQuad.cpp  RenderPass.cpp
src/Graphics/Buffers/: Buffer.cpp  CMakeLists.txt  Context.cpp  HostMesh.cpp  Loader.cpp  StaticMesh.cpp  Vertex.cpp  VertexLayout.cpp  VertexLayoutRegistry.cpp
src/Graphics/Builders/: Context.cpp  DescriptorPoolBuilder.cpp  DescriptorSetLayoutBuilder.cpp  FramebufferBuilder.cpp  GraphicsPipelineBuilder.cpp  ImageBuilder.cpp  ImageViewBuilder.cpp  ModelBuilder.cpp
src/Graphics/Components/: Camera.cpp  LightPoint.cpp  Model.cpp  Spotlight.cpp  Sun.cpp
src/Graphics/Core/: Context.cpp  Device.cpp  Instance.cpp  PhysicalDevice.cpp  Swapchain.cpp  Window.cpp
src/Graphics/Dev/: ViewportFramebuffer.cpp
src/Graphics/Editor/: Camera.cpp  ComponentEditorPanel.cpp  DragDropHandler.cpp  Editor.cpp  EditorContext.cpp  FileExplorer.cpp  Fonts.cpp  Icon.cpp  IconAtlas.cpp  Image.cpp  SceneEditorPanel.cpp  SceneHierarchyPanel.cpp  Texture.cpp  Toolbar.cpp  ViewportFramebuffer.cpp  ViewportPanel.cpp  Widgets.cpp  WorkspacePanel.cpp
src/Graphics/Factory/: Factories.cpp  GraphicsPipelineFactory.cpp  ModelFactory.cpp  ShaderFactory.cpp  TextureFactory.cpp
src/Graphics/Formats/: Context.cpp  FormatRegistry.cpp  Loader.cpp
src/Graphics/ForwardShader/: DescriptorSet.cpp  ForwardShader.cpp  Framebuffer.cpp  RenderPass.cpp
src/Graphics/Framebuffer/: Context.cpp  Framebuffer.cpp  FramebufferBuilder.cpp  FramebufferManager.cpp  Loader.cpp
src/Graphics/GUI/: Interpreter.cpp  Item.cpp
src/Graphics/Image/: Context.cpp  Image.cpp  ImageBuilder.cpp  ImageManager.cpp  ImageView.cpp  ImageViewBuilder.cpp  ImageViewManager.cpp  Loader.cpp
src/Graphics/Internal/: CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp  CommandPools.cpp  Context.cpp  Device.cpp  Instance.cpp  PhysicalDevice.cpp  Queue.cpp  QueueFamily.cpp  QueueHandler.cpp  Queues.cpp  Swapchain.cpp  Window.cpp  struct.cpp
src/Graphics/Material/: Buffer.cpp  Context.cpp  Manager.cpp  Material.cpp  Pool.cpp  Registry.cpp  SetLayout.cpp
src/Graphics/Mesh/: StaticMesh.cpp
src/Graphics/Models/: Loader.cpp  Mesh.cpp  Model.cpp
src/Graphics/Pipelines/: Default.cpp  GraphicsPipeline.cpp  GraphicsPipelineRegistry.cpp  LayoutRegistry.cpp  PipelineLayout.cpp
src/Graphics/Projections/: OrthographicProjection.cpp  PerspectiveProjection.cpp  Projection.cpp
src/Graphics/Queues/: CommandPools.cpp  GraphicsCommandBuffers.cpp  GraphicsCommandPool.cpp  GraphicsFamily.cpp  Manager.cpp  PresentFamily.cpp  TransfertCommandPool.cpp  TransfertFamily.cpp
src/Graphics/RenderPass/: Context.cpp  Loader.cpp  RenderPass.cpp  RenderPassBuilder.cpp  RenderPassManager.cpp
src/Graphics/RenderSystems/: Registry.cpp  RenderSequence.cpp  RenderSystem.cpp  RenderSystemCollection.cpp  RenderSystemRegistry.cpp
src/Graphics/Shaders/: CMakeLists.txt  Context.cpp  GraphicsPipeline.cpp  GraphicsPipelineBuilder.cpp  GraphicsPipelineFactory.cpp  GraphicsPipelineManager.cpp  Loader.cpp  PipelineLayout.cpp  PipelineLayoutBuilder.cpp  PipelinelayoutManager.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderFactory.cpp
src/Internal/: Context.cpp
src/Modules/: Loader.cpp  Module.cpp  ModuleInterface.cpp
src/Renderer/: Context.cpp  Renderer.cpp  WhiteTexture.cpp
src/Scenes/: Context.cpp  Entity.cpp  Scene.cpp
src/Wrappers/: SceneWrapper.cpp
tests/Testbed/: CMakeLists.txt  ForwardRenderSystem.cpp  ForwardRenderSystem.hpp  config.h.in  config.hpp.in  main.cpp  renderer.yaml
tests/UnitTests/: CMakeLists.txt  common.hpp
(+953 files in other folders)
